Fixed grid width on mobile view

--- a/src/scss/components/_grid.scss
+++ b/src/scss/components/_grid.scss
@@ -39,7 +39,7 @@
 
 // GRID
 .container {
-	width: 98%;
+	width: 96%;
 	margin: 0 auto;
 	overflow: hidden;
 	
@@ -69,24 +69,28 @@
 [class*="#{$grid-name}-"], .#{$grid-name} {
 	@include maxColWidth(100);
     min-height: 0.0625em;
-    margin: 0.25em $grid-gutter;
+	// margin: 0.25em $grid-gutter;
+	margin: 0.25em 0;
     padding: $grid-padding;
 	@include flexSize(1);
 }
 
 @media only screen and (min-width: $bp-medium) {
 	[class*="#{$grid-name}-"] {
-		margin: { top: 0.25em; bottom: 0.25em; }
+		// margin: { top: 0.25em; bottom: 0.25em; }
+		margin: 0.25em $grid-gutter;
 		
 		&:first-of-type { margin-left: 0; }
 		&:last-of-type { margin-right: 0; }
+		&:only-child, &:first-of-type:last-of-type { margin: { left: 0; right: 0; }; }
 	}
 	
 	.#{$grid-name} {
-		margin: 0.5em $grid-gutter;
+		margin: 0.25em $grid-gutter;
 
 		&:first-of-type { margin-left: 0; }
 		&:last-of-type { margin-right: 0; }
+		&:only-child, &:first-of-type:last-of-type { margin: { left: 0; right: 0; }; }
 	}
 	
 	@include flexGrid(12);
